--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   app:
-    ports:
-      - "8080:8080"
+    build:
+      context: .
+      dockerfile: Dockerfile.production
     command: ['npm', 'start']
