--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ./
       dockerfile: Dockerfile
     container_name: app
+    ports:
+      - "8080:8080"
     environment:
       NODOS_HOST: "0.0.0.0"
       NODOS_PORT: "8080"
