--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: ci
+name: "push"
 
 on:
   push:
@@ -11,20 +11,20 @@ env:
 jobs:
   docker:
     runs-on: ubuntu-latest
-  steps:
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build App
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: Dockerfile.production
-        push: true
-        tags: ${{ env.APP_IMAGE_NAME }}:latest
+      - name: Build App
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile.production
+          push: true
+          tags: ${{ env.APP_IMAGE_NAME }}:latest
 
-    - name: Run Tests
-      run: make test
+      - name: Run Tests
+        run: make test
