--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.PASSWORD }}
 
       - name: Build App
         uses: docker/build-push-action@v2
