--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,10 +14,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -33,4 +36,4 @@ jobs:
           tags: ${{ env.APP_IMAGE_NAME }}:latest
 
       - name: Run Tests
-        run: make test-compose
+        run: make test
