--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,7 @@ jobs:
   ubuntu:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Run container
         run: make compose-up
       - name: Run Tests
