--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,18 @@ services:
     volumes:
       - ./:/app
     command: ['npm', 'test']
+    depends_on:
+      - db
+
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: ${NODOS_DB_PASSWORD}
+      POSTGRES_USER: ${NODOS_DB_USERNAME}
+      POSTGRES_DB: ${NODOS_DB_HOSTNAME}
+    volumes:
+      - data:/var/lib/postgresql/data
+
+volumes:
+  data:
