--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - db
 
   db:
-    image: postgres
+    image: postgres:13-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: ${NODOS_DB_PASSWORD}
