--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,11 @@ services:
   app:
     build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.production
     container_name: app
-    ports:
-      - "8080:8080"
     environment:
       NODOS_HOST: "0.0.0.0"
       NODOS_PORT: "8080"
-    volumes:
-      - ./:/app
     command: ['npm', 'test']
     depends_on:
       - db
